# ktds-mvp-mrnam

./: .gitignore  README.md  add_sample_data.py  app.py  code_generator_service.py  code_validator.py  database.py  debug_db.py  pom.xml  pyproject.toml  requirements.txt  start.sh  start_rag.sh  test_code_generator.py  validation_results.db
.github/workflows/: main_mrnam-function-rag001.yml
src/main/java/com/kt/icis/: BackendApplication.java
src/main/java/com/kt/icis/oder/baseinfo/common/repository/: BtCciaCustChangInfoRepo.java  BtCciaCustDivdRepo.java  BtCciaCustIntegRepo.java  BtCcpiprodhierRepo.java  BtCordordinfoRepo.java  BtCsysorgtypeMbtsRepo.java  BtCwkoCiaSaTargInfoRepo.java  BtCwkoerpempinfoRepo.java  BtCwkoofficecodeRepo.java  BtCwkoorgmasterRepo.java  BtCwkoorgtypeRepo.java  BtEiCordordinfoRepo.java  BtEtCordordinfoRepo.java  BtIaCordordinfoRepo.java  BtIcCordordinfoRepo.java  BtInCordordinfoRepo.java  BtMsyserpempinfoRepo.java  BtMsysofficecodeMbtsRepo.java  BtMsysorgmasterRepo.java  BtPpCordordinfoRepo.java
src/main/java/com/kt/icis/oder/baseinfo/common/service/: BtCordordinfoSvc.java  (+15 more)
src/main/resources/: log4j2-elastic.xml  truststore.jks
src/main/resources/config/: application-ait.yml  application-dev.yml  application-local.yml  application-local2.yml  application-prd.yml  application-sit.yml  application.yml
static/css/: code-generation.css  dashboard.css  layout.css
static/js/: code-generation.js  dashboard_with_modal.js  layout.js
templates/: base.html  code_generation.html  code_inspection.html  index.html
video/: validation_results.db
(+148 files in other folders)
