[project]
name = "ktds-mvp-mrnam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-vision-imageanalysis>=1.0.0",
    "azure-core>=1.35.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-mgmt-compute>=34.1.0",
    "azure-mgmt-resource>=24.0.0",
    "azure-mgmt-storage>=23.0.1",
    "azure-search-documents>=11.5.3",
    "azure-storage-blob>=12.25.1",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "gitpython>=3.1.44",
    "openai>=1.93.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
